# webrend

./: .clang-format  .clang-tidy  .clang-tidy-naming-only  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: BuildOptimization.cmake  DefaultCompilers.cmake  StaticAnalysis.cmake  TestTarget.cmake
docker/: .env  docker-compose.yml  start_docker_dev_environment.sh
docker/debian_based/: Dockerfile  docker-entrypoint.sh
docker/debian_based/dotfiles/: bashrc  profile
docker/debian_based/dotfiles/vsnip/: cpp.json
docker/debian_based/usr_share/nvim/: sysinit.vim
docker/debian_based/usr_share/nvim/runtime/lua/: lsp_code_action_no_menu.lua
include/: webrend.hpp
scripts/: clang-tidy-naming-convention  naming-convention-fix
src/: CMakeLists.txt
src/utils/: CMakeLists.txt  file.hpp  logging.hpp
src/utils/file/: CMakeLists.txt  file.cpp
src/utils/profiling/: CMakeLists.txt  hires_timer.cpp  hires_timer.hpp  stats.cpp  stats.hpp
